--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="item">
-            	<img src="images/icons/main_icons/ac.svg" class="img-responsive">
+            	<img src="images/carousel/ac.jpg" class="img-responsive">
                 <div class="carousel-caption">
                     <h3>We service all A/C units</h3>
                 </div>
