--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="services">
         A/C • Cooling • Heating • Home • Business • Construction • Duct Work • Repair • Replacement
     </div>
-      <div class="row">
+    <div class="row">
         <div id="col-wrap">
             <div class="col-md-4">
             <img src="images/icons/main_icons/fan.svg" class="img-responsive">
@@ -92,6 +92,11 @@
             </div>
          </div>
     </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1700696.0968656924!2d-112.1303109!3d33.639744!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3fdbd017e6bbd5a1!2sMcGuran+Mechanical+Inc!5e0!3m2!1sen!2sus!4v1483996928435" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+  </div>
 </div>
 
 
